--- a/src/Components/Content/Home/Home.css
+++ b/src/Components/Content/Home/Home.css
@@ -139,6 +139,14 @@
     padding: 40px 10px 10px;
 }
 
+.feedback .feedback_slider .card_img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+    font-size: 28px;
+}
+
 .feedback_card .card_img {
     width: 60px;
     height: 60px;
@@ -148,6 +156,7 @@
     top: 0;
     left: 20px;
     transform: translateY(-50%);
+    font-size: 50px;
 }
 
 .feedback_card .feedback_message {
@@ -168,6 +177,7 @@
 
 .customer_details .customer_name {
     font-weight: bold;
+    text-transform: capitalize;
 }
 
 .feedback .slider_arrows {
