--- a/src/Components/Navigation/Mobile/Nav.css
+++ b/src/Components/Navigation/Mobile/Nav.css
@@ -75,6 +75,12 @@
     background-color: #5b5b5b;
     cursor: pointer;
     box-shadow: 0px 6px 25px -8px rgba(0,0,0,0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: 38px;
+    font-weight: bold;
 }
 
 .nav_header .user_name,
