--- a/src/Components/Admin/History/History.module.css
+++ b/src/Components/Admin/History/History.module.css
@@ -59,6 +59,41 @@
     height: 20px;
     border-radius: 50%;
     margin: 0 auto;
+    position: relative;
+}
+
+.status_indicator .status_tooltip {
+    padding: 0px 15px;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+    bottom: 150%;
+    left: 50%;
+    margin-left: -60px;
+    visibility: hidden;
+    transform: translateY(-50%);
+    opacity: 0;
+    transition: .3s;
+}
+
+.status_indicator .status_tooltip::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 0.6) transparent transparent transparent;
+}
+
+.status_indicator:hover > .status_tooltip {
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(0%);
 }
 
 .status_indicator.confirmed {
