--- a/src/Components/Admin/Admin.module.css
+++ b/src/Components/Admin/Admin.module.css
@@ -3,6 +3,16 @@
 .admin {
     min-height: 100vh;
     background-color: rgb(234, 234, 234);
+    opacity: 0;
+    animation: admin .7s forwards;
+}
+
+@keyframes admin {
+    from {
+        opacity: 0;
+    } to {
+        opacity: 1;
+    }
 }
 
 /********* HEADER *********/
