scroll-bars on windows - fixed

--- a/src/Components/Admin/Admin.module.css
+++ b/src/Components/Admin/Admin.module.css
@@ -116,13 +116,14 @@
     width: 170px;
     height: calc(100vh - 60px);
     background-color: #fff;
-    overflow-y: scroll;
+    overflow-x: hidden;
     top: 60px;
     left: 0;
     transform: translateX(0%);
     box-shadow: 1px 0 3px rgba(0,0,0,0.12), 1px 0 2px rgba(0,0,0,0.24);
     transition: .5s;
     padding-bottom: 20px;
+    box-sizing: content-box;
 }
 
 .admin_body.active {
@@ -200,6 +201,8 @@
     /* border: 4px solid red; */
     transition: .5s;
     padding: 15px;
+    box-sizing: content-box;
+    padding-right: 17px;
 }
 .admin_body.active .content {
     width: 100vw;
