--- a/src/Components/Admin/Favorites/Favorites.module.css
+++ b/src/Components/Admin/Favorites/Favorites.module.css
@@ -2,6 +2,7 @@
     max-width: 1200px;
     min-height: 200px;
     margin: 0 auto;
+    padding-right: 32px;
     /* border: 1px solid black; */
 }
 
@@ -14,8 +15,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
-    transform-style: preserve-3d;
-    backface-visibility: hidden;  
+    padding-bottom: 60px;
     /* border: 1px solid black; */
 }
 
