--- a/src/Components/Admin/UserInfo/UserInfo.module.css
+++ b/src/Components/Admin/UserInfo/UserInfo.module.css
@@ -24,6 +24,9 @@
     box-shadow: 
         0 0px 20px rgba(0,0,0,0.19), 
         0 0px 6px rgba(0,0,0,0.23);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .user_details .user_name {
