--- a/src/Components/AuthForm/Auth.module.css
+++ b/src/Components/AuthForm/Auth.module.css
@@ -20,10 +20,6 @@
     display: block;
 }
 
-.auth_holder .auth_body {
-    /* display: none; */
-}
-
 .auth_body.active {
     display: none;
 }
@@ -187,6 +183,21 @@
     opacity: 0;
     transition: .5s;
     transition-delay: .5s;
+    overflow: hidden;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.profile_img [type=file] {
+    cursor: pointer;
+    display: block;
+    min-height: 100%;
+    min-width: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    opacity: 0;
 }
 
 .profile_img.active {
