--- a/src/Components/Navigation/Mobile/Nav.css
+++ b/src/Components/Navigation/Mobile/Nav.css
@@ -81,6 +81,9 @@
     color: #fff;
     font-size: 38px;
     font-weight: bold;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .nav_header .user_name,
