auth fixes && commenting fixes

--- a/src/Components/Content/Rooms/RoomPage/RoomPage.css
+++ b/src/Components/Content/Rooms/RoomPage/RoomPage.css
@@ -200,6 +200,9 @@
     color: #fff;
     font-weight: bold;
     font-size: 34px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .room_body .card {
