--- a/src/Components/Content/Rooms/Rooms.css
+++ b/src/Components/Content/Rooms/Rooms.css
@@ -131,6 +131,10 @@
     cursor: pointer;
 }
 
+.section_options .option_item.selected {
+    font-weight: bold;
+}
+
 .section_options .option_item:hover {
     color: orange;
 }
