--- a/src/Components/Admin/UserInfo/UserInfo.module.css
+++ b/src/Components/Admin/UserInfo/UserInfo.module.css
@@ -33,6 +33,7 @@
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 10px;
+    text-transform: capitalize;
 }
 
 .user_details .user_location {
