--- a/src/Components/Content/Rooms/RoomPage/RoomPage.css
+++ b/src/Components/Content/Rooms/RoomPage/RoomPage.css
@@ -42,7 +42,8 @@
 
 .room_booking .room_calendar {
     width: 300px;
-    height: 250px;
+    height: auto;
+    padding-bottom: 15px;
     background-color: #fff;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     border-radius: 10px;
