--- a/src/Components/Modals/BookingModal/BookingModal.css
+++ b/src/Components/Modals/BookingModal/BookingModal.css
@@ -156,7 +156,9 @@
 
 .booking_modal .booking_calendar {
     width: 100%;
-    height: 50%;
+    /* height: 50%; */
+    height: auto;
+    padding-bottom: 10px;
     background-color: #fff;
     margin-bottom: 30px;
     border: none;
@@ -307,7 +309,7 @@
 
     .booking_modal .booking_calendar {
         width: 300px;
-        height: 230px;
+        height: auto;
         margin: 0 auto 15px;
     }
 
