--- a/src/Components/Modals/BookingModal/BookingModal.css
+++ b/src/Components/Modals/BookingModal/BookingModal.css
@@ -189,6 +189,10 @@
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
+.booking_guests select:focus {
+    border: 2px solid #00c8ff;
+}
+
 .booking_modal .modal_btn {
     display: block;
     padding: 8px 35px;
@@ -199,7 +203,17 @@
     outline: none;
     margin: 0 auto;
     cursor: pointer;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: .2s;
+}
+
+.booking_modal .modal_btn:hover {
+    color: #fff;
+    background-color: #00c8ff;
+}
+
+.booking_modal .modal_btn:focus {
+    border: 2px solid #00c8ff;
 }
 
 /*----- STEP-2 -----*/
@@ -259,6 +273,12 @@
     justify-content: center;
     align-items: center;
     font-size: 14px;
+    transition: .2s;
+}
+
+.services_options .service_select:hover {
+    background-color: #00c8ff;
+    color: #fff;
 }
 
 .service_select i {
