--- a/src/Components/Content/Home/Home.css
+++ b/src/Components/Content/Home/Home.css
@@ -78,7 +78,7 @@
 .whyus_card .card_circle {
     width: 70px;
     height: 70px;
-    background-color: orange;
+    background-color: #00c8ff;
     border-radius: 50%;
     top: 0;
     left: 50%;
