--- a/src/Components/Admin/Admin.module.css
+++ b/src/Components/Admin/Admin.module.css
@@ -87,11 +87,20 @@
     transform: translate(-50%, 8px);
 }
 
+.nav_toggle:hover > div {
+    background-color: #00c8ff;
+}
+
 /*----- LOG_OUT_BTN -----*/
 
 .admin_header .log_out {
     font-size: 24px;
     cursor: pointer;
+}
+
+.admin_header .log_out a {
+    text-decoration: none;
+    color: red;
 }
 
 /********* BODY && NAV && CONTENT *********/
@@ -141,7 +150,7 @@
     margin: 0 auto 10px;
     border-radius: 50%;
     border: 8px solid #fff;
-    box-shadow: 0 0 3px rgba(0,0,0,0.12), 0 0 2px rgba(0,0,0,0.24);
+    box-shadow: 0 0 4px rgba(0,0,0,0.12), 0 0 3px rgba(0,0,0,0.24);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -180,7 +189,8 @@
     font-size: 18px;
 }
 .nav_holder li.active {
-    border-right: 4px solid orange;
+    border-right: 4px solid #00c8ff;
+    color: #00c8ff;
 }
 
 .nav_holder li a {
