--- a/src/Components/Admin/UserInfo/UserInfo.module.css
+++ b/src/Components/Admin/UserInfo/UserInfo.module.css
@@ -71,10 +71,12 @@
     padding: 0 15px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    border: 3px solid #fff;
 }
 
 .body_item input:focus {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    border: 3px solid #00c8ff;
 }
 
 .submit_btn {
@@ -83,7 +85,7 @@
     padding: 15px 45px;
     font-size: 18px;
     border: none;
-    background-color: #ff652d;
+    background-color: #00c8ff;
     outline: none;
     border-radius: 15px;
     color: #fff;
@@ -94,7 +96,7 @@
 
 .submit_btn:hover,
 .submit_btn:focus {
-    background-color: #ff7948;
+    background-color: #4fd5fa;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     outline: none;
 }
