--- a/src/Components/AuthForm/Auth.module.css
+++ b/src/Components/AuthForm/Auth.module.css
@@ -4,7 +4,8 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: #04c571;
+    /* background-color: #04c571; */
+    background-color: #00c8ff;
     z-index: 3;
     visibility: hidden;
     opacity: 0;
@@ -105,7 +106,7 @@
 .close_reset > div {
     width: 20px;
     height: 3px;
-    background-color: #04c571;
+    background-color: #00c8ff;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -152,7 +153,7 @@
     margin: 0 auto;
     padding: 7px 30px;
     font-size: 18px;
-    background-color: #04c571;
+    background-color: #00c8ff;
     border: none;
     display: block;
     color: #fff;
@@ -166,7 +167,7 @@
 .auth_reset button:focus {
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     background-color: #fff;
-    color: #04c571;
+    color: #00c8ff;
 }
 
 .profile_img {
@@ -221,7 +222,7 @@
 
 }
 .auth_tabs .tab_item.active {
-    border-bottom: 4px solid #04c571;
+    border-bottom: 4px solid #00c8ff;
 }
 
 .forms_holder {
@@ -274,7 +275,7 @@
     height: 35px;
     width: 100%;
     outline: none;
-    border: 2px solid #04c571;
+    border: 2px solid #00c8ff;
     padding: 0 10px;
     font-size: 16px;
     background-color: #fff;
@@ -301,7 +302,7 @@
 .forms_holder button {
     padding: 7px 30px;
     font-size: 18px;
-    background-color: #04c571;
+    background-color: #00c8ff;
     border: none;
     display: block;
     color: #fff;
@@ -315,31 +316,23 @@
 .forms_holder button:focus {
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     background-color: #fff;
-    color: #04c571;
+    color: #00c8ff;
 }
 
 /*********** MEDIA QUERIES ***********/
 
 @media screen and (max-height: 500px) {
-
-    
-
     .auth_holder {
         width: 80%;
         height: 95%;
         overflow-y: scroll;
     }
-
     .profile_img {
         display: none;
     }
-
-
-
 }
 
 @media screen and (max-width: 375px) { 
-   
     .auth_holder {
         width: 95%;
         height: 80%;
@@ -348,6 +341,4 @@
     .profile_img {
         display: none;
     }
-
-  
 }
