--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -1,9 +1,7 @@
 .footer {
-    /* height: 400px; */
     background-color: #fff;
     width: 100%;
     box-shadow: 0 0 15px rgba(0,0,0,0.19), 0 0 5px rgba(0,0,0,0.23);
-    /* padding-top: 50px; */
 }
 
 .footer_social {
@@ -14,7 +12,6 @@
 .social_icons {
     height: 100%;
     max-width: 250px;
-    /* border: 1px solid black; */
     margin: 0 auto;
     display: flex;
     justify-content: space-around;
@@ -29,7 +26,7 @@
 }
 
 .social_icons i:hover {
-    color: #1bd87d;
+    color: #00c8ff;
 }
 
 .footer_copyright {
