--- a/src/Components/Navigation/Desktop/Nav.css
+++ b/src/Components/Navigation/Desktop/Nav.css
@@ -185,7 +185,7 @@
     right: 9px;
     box-shadow: 0 2px 15px -5px #333;
     list-style: none;
-    font-size: 24px;
+    font-size: 20px;
     opacity: 0;
     padding-top: 10px;
     visibility: hidden;
@@ -208,10 +208,20 @@
     z-index: 1;
     position: relative;
     margin-bottom: 10px;
+    color: #00c8ff;
+    font-weight: bold;
+    transition: .2s;
 }
 
 .options_item a {
-    color: orange;
+    color: #00c8ff;
+    font-weight: bold;
+    transition: .2s;
+}
+
+.options_item a:hover,
+.profile_options .options_item:hover {
+    color: #000;
 }
 
 .logged_out {
@@ -230,7 +240,7 @@
     color: #fff;
     font-size: 18px;
     cursor: pointer;
-    transition: .3s;
+    transition: .2s;
     outline: none;
     border: none;
     animation: animateLogo 1s forwards;
@@ -240,8 +250,7 @@
 }
 
 .logged_out .log_in:hover {
-    background-color: #fff;
-    color: #000;
+    background-color: #00c8ff;
     margin-left: auto;
 }
 
@@ -334,9 +343,11 @@
 @keyframes animateUnderline {
     from {
         width: 0%;
+        background-color: rgb(0, 200, 255);
     }
     to {
         width: 98%;
+        background-color: rgba(255, 255, 255, 0.5);
     }
 }
 
